kubes/graphql-server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bins-graphql-server
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: bins-graphql-server
  template:
    metadata:
      labels:
        app: bins-graphql-server
    spec:
      containers:
      - image: git.home.fa.gl/josh/bins-graphql-server:latest
        name: bins-graphql-server
        ports:
        - containerPort: 4010
