kubes/graphql-server/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: bins-graphql-server
spec:
  ports:
  - port: 4010
    targetPort: 4010
  selector:
    app: bins-graphql-server
